added if else function to price and some css to the design

--- a/product-page.html
+++ b/product-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Product page</title>
+    <title>Product</title>
     <script src="js/product-page.js" defer></script>
     <link href="css/product-page.css" rel="stylesheet" type="text/css">
 </head>
