--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkout</title>
-    <script src="js/checkout.js" defer></script>
+    <script src="checkout.html" defer></script>
 </head>
 <body>
 
