made a remove button, quantity counter in the cart

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
 <div id="cartDropdown" class="cart-dropdown">
     <i id="closeButton" class="fa-solid fa-x"></i>
+    <ul id="cartItems"></ul>
 </div>
+
 
 <div id="btnContainer">
     <button class="btn active" onclick="filterMovies(`All`)">All</button>
