added a checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkout</title>
-    <script src="checkout.html" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/checkout.js"></script>
 </head>
 <body>
+
+<ul id="cartList"></ul>
 
 </body>
 </html>
