--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Homepage</title>
     <script src="js/script.js" defer></script>
+    <script src="js/checkout.js"></script>
     <script src="https://kit.fontawesome.com/fe924a0d6e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -56,7 +57,9 @@
 
 <div id="cartDropdown" class="cart-dropdown">
     <i id="closeButton" class="fa-solid fa-x"></i>
+    <span>Cart overview</span>
     <ul id="cartItems"></ul>
+    <button id="viewDetailsButton">Checkout</button>
 </div>
 
 
@@ -97,6 +100,8 @@
         <span>© 2023 SQUAREEYES GROUP NORWAY AS . ALL RIGHTS RESERVED.</span>
     </div>
 </footer>
+
+
 
 </body>
 </html>
