--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="js/checkout.js"></script>
     <script src="https://kit.fontawesome.com/fe924a0d6e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -57,11 +60,12 @@
 
 <div id="cartDropdown" class="cart-dropdown">
     <i id="closeButton" class="fa-solid fa-x"></i>
-    <span>Cart overview</span>
+    <div class="hr-line"></div>
+    <span class="cart-overview">Cart overview</span>
     <ul id="cartItems"></ul>
     <button id="viewDetailsButton">Checkout</button>
 </div>
-1
+
 <div id="btnContainer">
     <button class="btn active" onclick="filterMovies(`All`)">All</button>
     <button class="btn" onclick="filterMovies(`Action`)">Action</button>
