--- a/checkout.html
+++ b/checkout.html
@@ -54,7 +54,16 @@
     </div>
 </header>
 
-<ul id="cartList"></ul>
+<div class="checkout-container">
+    <div class="checkout-overview">
+        <span>
+            Checkout
+        </span>
+    </div>
+    <ul id="cartList"></ul>
+</div>
+
+
 
 <footer>
     <div class="footer-div">
