--- a/checkout.html
+++ b/checkout.html
@@ -61,6 +61,10 @@
         </span>
     </div>
     <ul id="cartList"></ul>
+    <!--<div class="button-container">
+        <button class="purchase-button">Purchase</button>
+    </div>-->
+
 </div>
 
 
