--- a/product-page.html
+++ b/product-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Product</title>
     <script src="js/product-page.js" defer></script>
+    <script src="https://kit.fontawesome.com/fe924a0d6e.js" crossorigin="anonymous"></script>
     <link href="css/product-page.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -41,17 +42,24 @@
     </div>
     <div class="nav-icons">
         <div class="svg-icons">
-            <div id="cartIcon">
+            <div id="cartIcon" onclick="toggleCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none">
                     <path d="M1 1H5L7.68 14.39C7.77144 14.8504 8.02191 15.264 8.38755 15.5583C8.75318 15.8526 9.2107 16.009 9.68 16H19.4C19.8693 16.009 20.3268 15.8526 20.6925 15.5583C21.0581 15.264 21.3086 14.8504 21.4 14.39L23 6H6M10 21C10 21.5523 9.55228 22 9 22C8.44772 22 8 21.5523 8 21C8 20.4477 8.44772 20 9 20C9.55228 20 10 20.4477 10 21ZM21 21C21 21.5523 20.5523 22 20 22C19.4477 22 19 21.5523 19 21C19 20.4477 19.4477 20 20 20C20.5523 20 21 20.4477 21 21Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
+                <span class="cart-counter" style="color: white">0</span>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 18 20" fill="none">
-                <path d="M17 19V17C17 15.9391 16.5786 14.9217 15.8284 14.1716C15.0783 13.4214 14.0609 13 13 13H5C3.93913 13 2.92172 13.4214 2.17157 14.1716C1.42143 14.9217 1 15.9391 1 17V19M13 5C13 7.20914 11.2091 9 9 9C6.79086 9 5 7.20914 5 5C5 2.79086 6.79086 1 9 1C11.2091 1 13 2.79086 13 5Z" stroke="#FCFAFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
         </div>
     </div>
 </header>
+
+<div id="cartDropdown" class="cart-dropdown">
+    <i id="closeButton" class="fa-solid fa-x"></i>
+    <div class="hr-line"></div>
+    <span class="cart-overview">Cart overview</span>
+    <ul id="cartItems"></ul>
+    <button id="viewDetailsButton">Checkout</button>
+    <span id="totalCost"></span>
+</div>
 
 <div id="product-container">
 </div>
