Most of the functions are done

--- a/confirmation.html
+++ b/confirmation.html
@@ -3,18 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Confirmation</title>
-  <script src="js/confirmation.js"></script>
+    <script src="js/confirmation.js"></script>
+    <link rel="stylesheet" href="css/confirmation.css" type="text/css">
+    <script src="https://kit.fontawesome.com/fe924a0d6e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="confirmation-container">
   <div class="order-confirmation">
-    Order confirmation
+      <span>Thank you!</span>
+      <i class="fa-solid fa-check"></i>
   </div>
-  <div id="confirmationCartList">
-  </div>
+    <div class="span-div">
+        <span>
+            You're purchase was successful, and a confirmation has been sent to your email!
+        </span>
+    </div>
+    <div>
+        <div id="confirmationCartList">
+            <span class="order-span">Order confirmation</span>
+        </div>
+    </div>
+    <div>
+        <span class="homepage-span">Go back to our <a href="index.html">homepage</a> here</span>
+    </div>
 </div>
-
 
 </body>
 </html>
