--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 <div id="movie-container">
 </div>
 
+<!--<div id="loadingIndicator" class="hidden">
+    <div class="spinner"></div>
+    <div class="loading-text">Loading...</div>
+</div>-->
+
 <footer>
     <div class="footer-div">
         <svg width="200" height="150" viewBox="0 0 134 72" fill="none" xmlns="http://www.w3.org/2000/svg">
