--- a/checkout.html
+++ b/checkout.html
@@ -77,7 +77,9 @@
             <div class="card-inputs">
                 <div class="expiration-inputs">
                     <input type="text" id="expirationMonth" name="expirationMonth" placeholder="MM/YY">
+                    <label for="expirationMonth"></label>
                     <input type="text" id="expirationYear" name="expirationYear" placeholder="CVC">
+                    <label for="expirationYear"></label>
                 </div>
             </div>
             <div class="checkbox-container">
