--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
-    <script src="js/script.js" defer></script>
+    <script src="js/main.js" defer></script>
     <script src="js/checkout.js"></script>
     <script src="https://kit.fontawesome.com/fe924a0d6e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -76,11 +76,6 @@
 <div id="movie-container">
 </div>
 
-<!--<div id="loadingIndicator" class="hidden">
-    <div class="spinner"></div>
-    <div class="loading-text">Loading...</div>
-</div>-->
-
 <footer>
     <div class="footer-div">
         <svg width="200" height="150" viewBox="0 0 134 72" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -106,8 +101,6 @@
         <span>© 2023 SQUAREEYES GROUP NORWAY AS . ALL RIGHTS RESERVED.</span>
     </div>
 </footer>
-
-
 
 </body>
 </html>
