--- a/confirmation.html
+++ b/confirmation.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div>
-        <span class="homepage-span">Go back to our <a href="index.html">homepage</a> here</span>
+        <span class="homepage-span">Go back to our <a href="main.html">homepage</a> here</span>
     </div>
 </div>
 
