--- a/confirmation.html
+++ b/confirmation.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Confirmation</title>
     <script src="js/confirmation.js"></script>
     <link rel="stylesheet" href="css/confirmation.css" type="text/css">
@@ -25,7 +26,7 @@
         </div>
     </div>
     <div>
-        <span class="homepage-span">Go back to our <a href="main.html">homepage</a> here</span>
+        <span class="homepage-span">Go back to our <a href="index.html">homepage</a> here</span>
     </div>
 </div>
 
