--- a/confirmation.html
+++ b/confirmation.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div>
-        <span class="homepage-span">Go back to our <a href="index.html">homepage</a> here</span>
+        <span class="homepage-span">Go back to our <a href="index.html" id="lastPageButton">homepage</a> here</span>
     </div>
 </div>
 
