--- a/index.html
+++ b/index.html
@@ -39,11 +39,38 @@
             </svg>
             <nav>
                 <ul class="nav-list">
-                    <li><i class="fa-solid fa-film"></i>Movies</li>
-                    <li><i class="fa-solid fa-tv"></i>Series</li>
-                    <li><i class="fa-regular fa-futbol"></i>Sport</li>
-                    <li><i class="fa-regular fa-face-smile"></i>Kids</li>
-                    <li><i class="fa-regular fa-money-bill-1"></i>Buy & rent</li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-camera-video" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2zm11.5 5.175 3.5 1.556V4.269l-3.5 1.556zM2 4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1z"/>
+                        </svg>
+                        Movies
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-tv" viewBox="0 0 16 16">
+                            <path d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5M13.991 3l.024.001a1.5 1.5 0 0 1 .538.143.76.76 0 0 1 .302.254c.067.1.145.277.145.602v5.991l-.001.024a1.5 1.5 0 0 1-.143.538.76.76 0 0 1-.254.302c-.1.067-.277.145-.602.145H2.009l-.024-.001a1.5 1.5 0 0 1-.538-.143.76.76 0 0 1-.302-.254C1.078 10.502 1 10.325 1 10V4.009l.001-.024a1.5 1.5 0 0 1 .143-.538.76.76 0 0 1 .254-.302C1.498 3.078 1.675 3 2 3zM14 2H2C0 2 0 4 0 4v6c0 2 2 2 2 2h12c2 0 2-2 2-2V4c0-2-2-2-2-2"/>
+                        </svg>
+                        Series
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-dribbble" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8m5.284 3.688a6.8 6.8 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A7 7 0 0 1 8 1.18m-2.907.642A43 43 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.87 6.87 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.82 6.82 0 0 1-1.752-4.564zM8 14.837a6.8 6.8 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.3 28.3 0 0 1 1.457 5.18A6.7 6.7 0 0 1 8 14.837m3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.77 6.77 0 0 1-2.924 4.573z"/>
+                        </svg>
+                        Sport
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-emoji-smile" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                            <path d="M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5m4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5"/>
+                        </svg>
+                        Kids
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
+                            <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+                            <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2z"/>
+                        </svg>
+                        Buy & rent
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -71,15 +98,37 @@
 
 <div class="carousel-container">
     <div class="carousel">
-        <img src="assets/images/dune-part-two_lnnsx57r%20(1).jpg" alt="img">
-        <img src="assets/images/creed-iii_0jhrecb2%20(1).jpg" alt="img">
-        <img src="assets/images/creed-iii_0jhrecb2%20(1).jpg" alt="img">
+        <div class="slide">
+            <img src="assets/images/dune-part-two_lnnsx57r%20(1).jpg" alt="img">
+            <div class="content">
+                <h3>Dune: Part Two</h3>
+                <p><i class="fa-brands fa-imdb"></i> 8.5 |Sci-Fi/Adventure | 2024 | 2h 46m | PG 12</p><br>
+                <p>Experience the epic continuation to the saga.</p>
+            </div>
+        </div>
+        <div class="slide">
+            <img src="assets/images/the-fall-guy_ujlljtse%20(1).jpg" alt="img">
+            <div class="content">
+                <h3>The fall guy</h3>
+                <p><i class="fa-brands fa-imdb"></i> 6.9 | Action/Comedy | 2024 | 2h 5m | PG 12</p><br>
+                <p>The stuntman becomes the hero.</p>
+            </div>
+        </div>
+        <div class="slide">
+            <img src="assets/images/furiosa-a-mad-max-saga_uojlqxp9%20(1).jpg" alt="img">
+            <div class="content">
+                <h3>Furiosa: A Mad Max Saga</h3>
+                <p><i class="fa-brands fa-imdb"></i> 7.6 | Action/Adventure | 2024 | 2h 28m | PG 15</p><br>
+                <p>The origin story of warrior Furiosa.</p>
+            </div>
+        </div>
     </div>
-    <button class="prev">‹</button>
-    <button class="next">›</button>
-    <div class="pagination">
-    </div>
+    <button class="prev"><i class="fa-solid fa-chevron-left"></i></button>
+    <button class="next"><i class="fa-solid fa-chevron-right"></i></button>
+    <div class="pagination"></div>
 </div>
+
+
 
 
 <div id="btnContainer">
