feat: added more styling to all pages

--- a/index.html
+++ b/index.html
@@ -128,17 +128,18 @@
     <div class="pagination"></div>
 </div>
 
-
-
-
-<div id="btnContainer">
-    <button class="btn active" onclick="filterMovies(`All`)">All</button>
-    <button class="btn" onclick="filterMovies(`Action`)">Action</button>
-    <button class="btn" onclick="filterMovies(`Comedy`)">Comedy</button>
-    <button class="btn" onclick="filterMovies(`Drama`)">Drama</button>
-    <button class="btn" onclick="filterMovies(`Kids`)">Kids</button>
-    <button class="btn" onclick="filterMovies(`Horror`)">Horror</button>
+<div>
+    <p class="sale">Movies for sale</p>
+    <div id="btnContainer">
+        <button class="btn active" onclick="filterMovies(`All`)">All</button>
+        <button class="btn" onclick="filterMovies(`Action`)">Action</button>
+        <button class="btn" onclick="filterMovies(`Comedy`)">Comedy</button>
+        <button class="btn" onclick="filterMovies(`Drama`)">Drama</button>
+        <button class="btn" onclick="filterMovies(`Kids`)">Kids</button>
+        <button class="btn" onclick="filterMovies(`Horror`)">Horror</button>
+    </div>
 </div>
+
 
 <div id="movie-container">
 </div>
