fix: fixed minor issues and cleaned up some code

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="pagination"></div>
 </div>
 
-<div>
+<div class="filter-btn">
     <p class="sale">Movies for sale</p>
     <div id="btnContainer">
         <button class="btn active" onclick="filterMovies(`All`)">All</button>
